# aegis

./: .gitignore  LICENSE  NOTICE  README.md
app/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
app/public/circuits/: withdraw.wasm
app/scripts/: e2e.mjs
app/src/: App.tsx  abi.ts  auth.tsx  config.ts  index.css  main.tsx  shims.d.ts  solana.ts  wagmi.ts
app/src/components/: CoinMark.tsx  CursorGlow.tsx  HeroCoin.tsx  HeroParticles.tsx  SocialLinks.tsx  ThemeToggle.tsx
app/src/hooks/: useDeposit.ts  usePoolStats.ts  useReveal.ts  useUsdc.ts  useWithdraw.ts  useZK.ts
app/src/lib/: eth.ts
app/src/pages/: Dapp.tsx  Landing.tsx  SolanaTransfer.tsx
contracts/: .env.example  .gitignore  foundry.toml
contracts/circuits/: merkleTree.circom  withdraw.circom
contracts/poseidon-artifact/: PoseidonT3.json
contracts/script/: Deploy.s.sol
contracts/src/: IHasher.sol  IVerifier.sol  MerkleTreeWithHistory.sol  UsdcPrivacyPool.sol  Verifier.sol
contracts/test/: UsdcPrivacyPool.t.sol  UsdcPrivacyPoolIntegration.t.sol
contracts/test/mocks/: MockHasher.sol  MockUSDC.sol  MockVerifier.sol  ReentrantRecipient.sol
solana/: Anchor.toml  README.md
solana/programs/aegis-pool/: Cargo.toml
solana/programs/aegis-pool/src/: lib.rs  verifying_key.rs
solana/setup/: install-toolchain.sh
