[package]
name = "aegis-pool"
version = "0.1.0"
description = "Aegis Protocol — fixed-denomination USDC (SPL) shielded pool on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aegis_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
groth16-solana = "0.0.3"
